--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -16,6 +16,7 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    
 
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
@@ -28,7 +29,7 @@
     -->
     <title>Sportz</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="your-correct-sha384-value" crossorigin="anonymous">
-
+  
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -43,5 +44,27 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <!-- <script src="https://cdn.botpress.cloud/webchat/v1/inject.js"></script>
+<script>
+  window.botpressWebChat.init({
+      "composerPlaceholder": "Sportz Chatbot",
+      "botConversationDescription": "Welcome!",
+      "botId": "39f05996-025d-4ffe-b2ab-4966c250c911",
+      "hostUrl": "https://cdn.botpress.cloud/webchat/v1",
+      "messagingUrl": "https://messaging.botpress.cloud",
+      "clientId": "39f05996-025d-4ffe-b2ab-4966c250c911",
+      "webhookId": "7ea2a216-1ee0-4003-89b4-43e6574bfb28",
+      "lazySocket": true,
+      "themeName": "prism",
+      "botName": "Sportz Chatbot",
+      "avatarUrl": "",
+      "stylesheet": "https://webchat-styler-css.botpress.app/prod/d2e5a646-5c11-4eb0-8b31-e9caee6206ae/v5834/style.css",
+      "frontendVersion": "v1",
+      "useSessionStorage": true,
+      "enableConversationDeletion": true,
+      "theme": "prism",
+      "themeColor": "#2563eb"
+  });
+</script> -->
   </body>
 </html>
